# VCPToolBox_test

./: .gitignore  DIARY_TAG_BATCH_PROCESSOR.md  Dockerfile  EmbeddingUtils.js  FileFetcherServer.js  KnowledgeBaseManager.js  Plugin.js  README.md  SQLITE_REFACTOR_SUMMARY.md  TIMEZONE_CHECK_REPORT.md  TagCooccurrenceDB.js  TagExpander.js  TagIndexWorker.js  TagIndexWorker.worker.js  TagVectorManager.js  TagVectorizeWorker.js  TagVectorizeWorker.worker.js  TextChunker.js  VEXUS_INTEGRATION_EXPLAINED.md  VectorDBManager.js  VectorDBManager_TagExtension.js  VectorDBStorage.js  WebSocketServer.js  WorkerPool.js  agent_map.json.example  backup_vcp.py  build_tag_vector_library.js  check_vectordb_status.js  config.env.example  diary-tag-batch-processor.js  diary-tag-processor-package.json  docker-compose.yml  git-test-verification.md  main.html  migrate_to_sqlite.js  package-lock.json  package.json  preload.js  rebuild_vector_indexes.js  renderer.js  (+12 more)
AdminPanel/: easymde.min.css  easymde.min.js  index.html  script.js  style.css  tool_list_editor.html  tool_list_editor.js  tool_list_editor_new.css  vcptavern_editor.js
Agent/: Hornet.txt  Metis.txt  Nova.txt  ThemeMaidCoco.txt
TVStxt/: Dailynote.txt  DiceTarot.txt  ToolForum.txt  VibeTheme.txt  filetool.txt.example  supertool.txt.example
TimelineGenerator/: TimelineGenerator.js
VCPChrome/: background.js  content_script.js  popup.html  popup.js
docs/: 常见问题.md  (+20 more)
rust-vexus-lite/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  test.js  vexus-lite.node  vexus-lite.win32-x64-msvc.node
rust-vexus-lite/src/: lib.rs
(+342 files in other folders)
