[package]
name = "vexus-lite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS核心依赖
napi = "2.16"
napi-derive = "2.16"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化（bincode替代JSON）
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# HNSW向量索引
usearch = "2.8"

# 哈希Map优化
hashbrown = "0.14"

# SQLite 数据库驱动
rusqlite = { version = "0.29", features = ["bundled"] }

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true           # 链接时优化
codegen-units = 1    # 最大优化
opt-level = 3        # 最高优化级别
strip = true         # 移除符号信息